--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,13 @@
 * {
   margin: 0px;
   padding: 0px;
-  overflow: hidden;
+  overflow-y:auto;
+  overflow-x: hidden;
 }
 
 .container{
   background-color: #ced8ff;
-  min-height: 100vh;
+  height: 100vh;
   width: 100vw;
   transition: 0.8s;
 }
