--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -5,6 +5,8 @@
     margin: 0px;
     padding: 15px 7%;
     background-color: rgb(255, 255, 255);
+    position: sticky;
+    top: 0;
 }
 
 .logo {
@@ -12,26 +14,116 @@
     cursor: pointer;
 }
 
-ul{
+ul {
     flex: 1;
     list-style: none;
     text-align: center;
 }
 
-ul li{
+ul li {
     display: inline-block;
     margin: 10px 20px;
     font-size: 18px;
     cursor: pointer;
 }
 
-.toggle-icon{
+ul li a {
+    display: block;
+    color: black;
+    text-decoration: none;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+}
+
+ul li a:not(.active):hover {
+    background: rgb(133, 132, 132);
+}
+
+.dark .nav {
+    background: #000000;
+    color: #ced8ff;
+}
+
+.dark ul li a {
+    color: white;
+}
+
+.active {
+    background: black;
+    color: white;
+}
+
+.dark .active {
+    background: white;
+    color: black;
+}
+
+.toggle-icon {
     width: 50px;
     cursor: pointer;
     margin-left: 40px;
 }
 
-.dark .nav{
-    background: #000000;
-    color: #ced8ff;
+.menu {
+    position: absolute;
+    top: 0.75rem;
+    right: 0.5rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 2.25rem;
+    height: 2rem;
+}
+
+.menu span {
+    height: 0.4rem;
+    width: 100%;
+    background-color: #000000;
+    border-radius: 0.2rem;
+}
+
+.dark .menu span {
+    background-color: #fff;
+}
+
+
+@media (max-width:480px) {
+    .menu {
+        display: flex;
+    }
+
+    .nav {
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .nav ul {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        margin-bottom: 0.25rem;
+    }
+
+    .nav ul.open {
+        display: flex;
+    }
+
+    .nav ul li {
+        width: 100%;
+        text-align: center;
+    }
+
+    .nav ul li a {
+        margin: 0.2rem 0.5rem;
+    }
+
+    .toggle-icon {
+        width: 50px;
+        cursor: pointer;
+        margin-left: 8rem;
+    }
+
+    .toggle-icon-open {
+        display: none;
+    }
 }
